updated profile edit address and delete

--- a/views/user/ProductView.ejs
+++ b/views/user/ProductView.ejs
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/animsition/css/animsition.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/select2/select2.min.css">
+	<link rel="shortcut icon" type="image/png" href="/images/logo.png">
 <!--===============================================================================================-->	
 	<link rel="stylesheet" type="text/css" href="/shopTemplate/vendor/daterangepicker/daterangepicker.css">
 <!--===============================================================================================-->
