--- a/views/user/editAddress.ejs
+++ b/views/user/editAddress.ejs
@@ -151,18 +151,18 @@
 								<div class="mb-1">
 									<label for="recipient-name"
 										class="col-form-label">Housename:</label>
-									<input required  type="text" value="<%=address.housename%>" class="form-control" id="housename"
-										name="housename" />
+									<input required  type="text" value="<%=address.housename%>"   class="form-control" id="housename"
+										name="housename" required />
 								</div>
 								<div class="mb-3">
 									<label for="recipient-name" class="col-form-label">Area:</label>
 									<input required type="text" value="<%=address.area%>" class="form-control" id="area"
-										name="area" />					
+										name="area" required/>					
 								</div>
 								<div class="mb-3">
 									<label for="recipient-name" class="col-form-label">Landmark:</label>
 									<input required type="text" value="<%=address.landMark%>" class="form-control" id="landmark"
-										name="landmark" />						
+										name="landmark" required/>						
 								</div>
 								<div class="mb-3">
 									<div class="row">
