--- a/views/user/profilePassword.ejs
+++ b/views/user/profilePassword.ejs
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/css/flaticon.css">
     <link rel="stylesheet" href="/css/icomoon.css">
     <link rel="stylesheet" href="/css/style.css">
-
+    <link rel="shortcut icon" type="image/png" href="/images/logo.png">
     <!-- new template -->
 
     <link rel="stylesheet" type="text/css" href="/changePassword/css/util.css">
