--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -99,6 +99,7 @@
     <link rel="stylesheet" href="/css/magnific-popup.css" />
 
     <link rel="stylesheet" href="/css/aos.css" />
+    <link rel="shortcut icon" type="image/png" href="/images/logo.png">
 
     <link rel="stylesheet" href="/css/ionicons.min.css" />
 
