--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/css/aos.css" />
 
     <link rel="stylesheet" href="/css/ionicons.min.css" />
-    <link rel="shortcut icon" type="image/png" href="../images/logo.png">
+    <link rel="shortcut icon" type="image/png" href="/images/logo.png">
 
     <link rel="stylesheet" href="/css/bootstrap-datepicker.css" />
     <link rel="stylesheet" href="/css/jquery.timepicker.css" />
