--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="../loginTemplate/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../loginTemplate/vendor/animate/animate.css">
+	<link rel="shortcut icon" type="image/png" href="/images/logo.png">
 <!--===============================================================================================-->	
 	<link rel="stylesheet" type="text/css" href="../loginTemplate/vendor/css-hamburgers/hamburgers.min.css">
 <!--===============================================================================================-->
