--- a/views/user/orderedProduct.ejs
+++ b/views/user/orderedProduct.ejs
@@ -25,6 +25,7 @@
 
     <link rel="stylesheet" href="/css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="/css/jquery.timepicker.css">
+    <link rel="shortcut icon" type="image/png" href="/images/logo.png">
 
     
     <link rel="stylesheet" href="/css/flaticon.css">
