--- a/views/user/userTwoFactor.ejs
+++ b/views/user/userTwoFactor.ejs
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="/otpTemplate/fonts/iconic/css/material-design-iconic-font.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/otpTemplate/vendor/animate/animate.css">
+	<link rel="shortcut icon" type="image/png" href="/images/logo.png">
 <!--===============================================================================================-->	
 	<link rel="stylesheet" type="text/css" href="/otpTemplate/vendor/css-hamburgers/hamburgers.min.css">
 <!--===============================================================================================-->
