address details checked

--- a/views/user/orderedProduct.ejs
+++ b/views/user/orderedProduct.ejs
@@ -120,7 +120,7 @@
                   </div>
                         <% let phone='Ph:' %>
                   <div class="ms-3">
-                      <p><%=productData[0].name %>,<br><%=productData[0].address %>,<br><%=phone %> <%=orderDetails[0].phoneNumber%></p>
+                      <p><%=productData[0].name %>,<br><%=orderDetails[0].houseName %></p>
                   </div>
                   
                   <div class="mx-n5 px-5 py-4" style="background-color: #f2f2f2;">
