--- a/views/user/editAddress.ejs
+++ b/views/user/editAddress.ejs
@@ -169,12 +169,12 @@
 										<div class="col-md-6 mb-3">
 											<label for="firstName">District</label>
 											<input required type="text" value="<%=address.district%>" class="form-control"
-												id="district" name="district" />
+												id="district" name="district" required/>
 										</div>
 										<div class="col-md-6 mb-3">
 											<label for="lastName">State</label>
 											<input required type="text" value="<%=address.state%>" class="form-control" id="state"
-												name="state" />
+												name="state" required/>
 											
 										</div>
 									</div>
@@ -184,12 +184,12 @@
 										<div class="col-md-6 mb-3">
 											<label for="firstName">Post office</label>
 											<input required type="text" value="<%=address.postoffice%>" class="form-control"
-												id="postoffice" name="postoffice" />								
+												id="postoffice" name="postoffice" required/>								
 										</div>
 										<div class="col-md-6 mb-3">
 											<label for="lastName">Pincode</label>
 											<input required type="text" value="<%=address.pin%>" class="form-control" id="pin"
-												name="pin" />
+												name="pin" required/>
 											
 										</div>
 									</div>
