--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -160,7 +160,7 @@
                 <div class="modal-body">
                   <div class="form-outline mb-1">
                     <input type="file" id="myProfile" style="height: 45px!important;"
-                      class="form-control form-control-lg" name="myDP" />
+                      class="form-control form-control-lg" name="myDP" required/>
                     <input type="hidden" name="editDp" value="<%=userData.profile%>" />
                   </div>
                 </div>
@@ -439,25 +439,25 @@
             <div class="modal-body">
               <div class="mb-1">
                 <label for="recipient-name" class="col-form-label">Housename:</label>
-                <input required type="text" class="form-control" id="housename" name="housename" />
+                <input required type="text" class="form-control" id="housename" name="housename" required />
               </div>
               <div class="mb-3">
                 <label for="recipient-name" class="col-form-label">Area:</label>
-                <input required type="text" class="form-control" id="area" name="area" />
+                <input required type="text" class="form-control" id="area" name="area" required/>
               </div>
               <div class="mb-3">
                 <label for="recipient-name" class="col-form-label">Landmark:</label>
-                <input required type="text" class="form-control" id="landmark" name="landmark" />
+                <input required type="text" class="form-control" id="landmark" name="landmark" required/>
               </div>
               <div class="mb-3">
                 <div class="row">
                   <div class="col-md-6 mb-3">
                     <label for="firstName">District</label>
-                    <input required type="text" class="form-control" id="district" name="district" />
+                    <input required type="text" class="form-control" id="district" name="district" required/>
                   </div>
                   <div class="col-md-6 mb-3">
                     <label for="lastName">State</label>
-                    <input required type="text" class="form-control" id="state" name="state" />
+                    <input required type="text" class="form-control" id="state" name="state"required />
 
                   </div>
                 </div>
@@ -466,11 +466,11 @@
                 <div class="row">
                   <div class="col-md-6 mb-3">
                     <label for="firstName">Post office</label>
-                    <input required type="text" class="form-control" id="postoffice" name="postoffice" />
+                    <input required type="text" class="form-control" id="postoffice" name="postoffice"required />
                   </div>
                   <div class="col-md-6 mb-3">
                     <label for="lastName">Pincode</label>
-                    <input required type="text" class="form-control" id="pin" name="pin" />
+                    <input required type="text" class="form-control" id="pin" name="pin" required/>
 
                   </div>
                 </div>
