solved the bug in checkout

--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -10,7 +10,7 @@
 
         <p id="alert" class="text-danger d-flex justify-content-center"></p>
         <div class="form-outline flex-fill mb-0 mt-4">
-          <input class="form-control"   placeholder="main_image" type="file" id="images" name="myFiles" multiple>
+          <input class="form-control"   placeholder="main_image" accept="image/png,image/jpg,image/jpeg" type="file" id="images" name="myFiles" multiple>
         </div>
        
         <div class="form-outline flex-fill mb-0 mt-4">
