contact page modified

--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -117,14 +117,15 @@
       </div>
     </div>
 
-    <section class="ftco-section contact-section bg-light">
-      <div class="container">
+    <section class="ftco-section contact-section bg-light ">
+      <div class="container mt-5">
         <div
           class="row block-9"
           style="display: flex; justify-content: center; align-items: center"
         >
           <div class="col-md-8 order-md-last d-flex">
-            <form action="" class="bg-white p-5 contact-form" id="submit-form">
+            <form action="" class="bg-white p-5 contact-form" id="submit-form" style="margin-top: 2rem;margin-bottom: 5rem;"
+            >
               <div class="form-group">
                 <input
                   type="text"
