cart desgin modified

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -90,7 +90,7 @@
 		<% if (locals.countInCart!==0) { %> 
 			<div class="container">
 				<div class="row">
-    			<div class="col-md-12 ftco-animate">
+    			<div class="col-md-12 ftco-animate"  style="margin-top: 4rem;">
     				<div class="cart-list">
 	    				<table class=" table">
 						    <thead class="thead-primary">
