--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -132,6 +132,7 @@
                   class="form-control"
                   name="username"
                   placeholder="Your Name"
+                  required
                 />
               </div>
               <div class="form-group">
@@ -140,6 +141,7 @@
                   class="form-control"
                   name="email"
                   placeholder="Your Email"
+                  required
                 />
               </div>
               <div class="form-group">
@@ -148,6 +150,7 @@
                   class="form-control"
                   name="number"
                   placeholder="Phone Number"
+                  required
                 />
               </div>
               <div class="form-group">
@@ -159,6 +162,7 @@
                   rows="7"
                   class="form-control"
                   placeholder="Message"
+                  required
                 ></textarea>
               </div>
               <div class="form-group">
