cart responsive issue solved

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -90,7 +90,7 @@
 		<% if (locals.countInCart!==0) { %> 
 			<div class="container">
 				<div class="row">
-    			<div class="col-md-12 ftco-animate"  style="margin-top: 4rem;">
+    			<div class="col-md-12 ftco-animate"  style="margin-top: 3rem;">
     				<div class="cart-list">
 	    				<table class=" table">
 						    <thead class="thead-primary">
@@ -157,7 +157,7 @@
     		</div>
 			<% if (locals.countInCart!==0) { %> 
 			<div class="row justify-content-start">
-    			<div class="col col-lg-5 col-md-6 mt-5 cart-wrap ftco-animate">
+    			<div class="col col-lg-5 col-md-6 mt-5 cart-wrap ftco-animate" style="margin-bottom: 3rem;">
     				<div class="cart-total mb-3">
     					<h3>Cart Totals</h3>
     					<p class="d-flex">
