--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -110,7 +110,7 @@
             >
               <img
                 class="one-third order-md-last img-fluid"
-                src="/images/<%=banner.bannerImage%>"
+                src="<%=banner.bannerImage%>"
                 alt=""
               />
               <div
